--- a/docs/Ask-Green-Your-Lab.css
+++ b/docs/Ask-Green-Your-Lab.css
@@ -12,6 +12,7 @@
 .u-section-1 .u-image-1 {
   min-height: 441px;
   pointer-events: auto;
+  background-image: url("images/GreenYourLab.jpg");
   background-position: 50% 50%;
 }
 
@@ -39,11 +40,10 @@
 }
 
 .u-section-1 .u-text-2 {
-  font-family: Rosario;
-  font-size: 1.5rem;
-  background-image: none;
-  font-style: italic;
   width: 426px;
+  font-size: 1.5rem;
+  font-family: Rosario;
+  font-style: italic;
   margin: 33px auto 0;
 }
 
@@ -63,11 +63,11 @@
   grid-template-columns: calc(50% - 5px) calc(50% - 5px);
   grid-template-rows: auto;
   grid-gap: 10px 10px;
-  height: auto;
   margin: -69px calc(((100% - 1140px) / 2) + -63px) 10px auto;
 }
 
 .u-section-1 .u-image-2 {
+  background-image: url("images/twitter.png");
   background-position: 50% 50%;
 }
 
@@ -76,6 +76,7 @@
 }
 
 .u-section-1 .u-image-3 {
+  background-image: url("images/facebook.png");
   background-position: 50% 50%;
 }
 
@@ -102,6 +103,7 @@
   }
 
   .u-section-1 .u-list-1 {
+    height: auto;
     margin-right: calc(((100% - 940px) / 2) + -31px);
   }
 }
@@ -117,7 +119,6 @@
   }
 
   .u-section-1 .u-container-layout-1 {
-    padding-bottom: 0;
     padding-left: 30px;
     padding-right: 30px;
   }
@@ -253,8 +254,6 @@
   .u-section-1 .u-text-1 {
     font-size: 3rem;
     width: 330px;
-    margin-left: 40px;
-    margin-right: 40px;
   }
 
   .u-section-1 .u-text-2 {
@@ -344,10 +343,6 @@
     width: 720px;
   }
 
-  .u-section-2 .u-container-layout-1 {
-    padding-bottom: 0;
-  }
-
   .u-section-2 .u-btn-1 {
     margin-left: 0;
   }
@@ -407,18 +402,18 @@
     margin-bottom: -14px;
   }
 }.u-section-3 .u-sheet-1 {
-  min-height: 1387px;
+  min-height: 2645px;
 }
 
 .u-section-3 .u-image-1 {
   height: 423px;
-  object-position: 50% 86.02%;
-  margin: 20px 0 0;
+  object-position: 50% 67.54%;
+  margin: 20px auto 0 0;
 }
 
 .u-section-3 .u-group-1 {
   width: 800px;
-  min-height: 67px;
+  min-height: 149px;
   margin: -99px 155px 0 auto;
 }
 
@@ -427,18 +422,10 @@
 }
 
 .u-section-3 .u-text-1 {
-  width: 573px;
   font-weight: 700;
-  background-image: none;
   font-style: normal;
+  width: 573px;
   margin: -13px auto 0;
-}
-
-.u-section-3 .u-text-2 {
-  font-size: 1.25rem;
-  font-weight: 400;
-  line-height: 1.6;
-  margin: 21px 0 35px;
 }
 
 .u-section-3 .u-btn-1 {
@@ -449,13 +436,87 @@
   padding: 0;
 }
 
+.u-section-3 .u-text-2 {
+  font-size: 1.25rem;
+  font-weight: 400;
+  line-height: 1.6;
+  margin: 20px 0 0;
+}
+
 .u-section-3 .u-btn-3 {
   padding: 0;
 }
 
+.u-section-3 .u-gallery-1 {
+  height: 1254px;
+  margin: 30px auto 80px 0;
+}
+
+.u-section-3 .u-gallery-inner-1 {
+  grid-gap: 0px 0px;
+  grid-template-columns: auto auto auto;
+}
+
+.u-section-3 .u-over-slide-1 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
+}
+
+.u-section-3 .u-over-slide-2 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
+}
+
+.u-section-3 .u-over-slide-3 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
+}
+
+.u-section-3 .u-back-image-4 {
+  object-position: 0% 50%;
+}
+
+.u-section-3 .u-over-slide-4 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
+}
+
+.u-section-3 .u-back-image-5 {
+  object-position: 100% 50%;
+}
+
+.u-section-3 .u-over-slide-5 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
+}
+
+.u-section-3 .u-over-slide-6 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
+}
+
+.u-section-3 .u-over-slide-7 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
+}
+
+.u-section-3 .u-back-image-8 {
+  object-position: 50% 6.55%;
+}
+
+.u-section-3 .u-over-slide-8 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
+}
+
+.u-section-3 .u-over-slide-9 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
+}
+
 @media (max-width: 1199px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 1643px;
+    min-height: 2065px;
   }
 
   .u-section-3 .u-image-1 {
@@ -465,7 +526,7 @@
   }
 
   .u-section-3 .u-group-1 {
-    min-height: 202px;
+    min-height: 155px;
     margin-top: 0;
     margin-right: initial;
     margin-left: initial;
@@ -476,35 +537,56 @@
     margin-top: 0;
   }
 
-  .u-section-3 .u-text-2 {
-    margin-top: 0;
-    margin-bottom: -511px;
+  .u-section-3 .u-gallery-1 {
+    height: 1034px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-3 .u-gallery-inner-1 {
+    grid-template-columns: repeat(3, auto);
   }
 }
 
 @media (max-width: 991px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 1835px;
+    min-height: 2057px;
+  }
+
+  .u-section-3 .u-group-1 {
+    min-height: 158px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-3 .u-text-1 {
-    margin-left: 44px;
-    margin-right: 44px;
+    margin-left: -30px;
+    margin-right: -30px;
   }
 
   .u-section-3 .u-text-2 {
     width: 720px;
-    margin-bottom: 70px;
+  }
+
+  .u-section-3 .u-gallery-1 {
+    height: 1244px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-3 .u-gallery-inner-1 {
+    grid-template-columns: repeat(2, auto);
   }
 }
 
 @media (max-width: 767px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 2273px;
+    min-height: 4545px;
   }
 
   .u-section-3 .u-group-1 {
-    min-height: 256px;
+    min-height: 197px;
     width: auto;
     margin-right: initial;
     margin-left: initial;
@@ -523,32 +605,46 @@
 
   .u-section-3 .u-text-2 {
     width: 540px;
-    margin-bottom: -262px;
+  }
+
+  .u-section-3 .u-gallery-1 {
+    height: 3732px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-3 .u-gallery-inner-1 {
+    grid-template-columns: repeat(1, auto);
   }
 }
 
 @media (max-width: 575px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 3063px;
+    min-height: 3163px;
   }
 
   .u-section-3 .u-group-1 {
-    min-height: 188px;
+    min-height: 129px;
     width: auto;
     margin-right: initial;
     margin-left: initial;
   }
 
   .u-section-3 .u-text-1 {
-    margin-right: -20px;
     width: 320px;
   }
 
   .u-section-3 .u-text-2 {
     width: 340px;
   }
+
+  .u-section-3 .u-gallery-1 {
+    height: 2350px;
+    margin-right: initial;
+    margin-left: initial;
+  }
 }.u-section-4 .u-sheet-1 {
-  min-height: 595px;
+  min-height: 1280px;
 }
 
 .u-section-4 .u-image-1 {
@@ -559,7 +655,7 @@
 
 .u-section-4 .u-group-1 {
   width: 800px;
-  min-height: 149px;
+  min-height: 67px;
   margin: -99px 155px 0 auto;
 }
 
@@ -568,22 +664,35 @@
 }
 
 .u-section-4 .u-text-1 {
-  font-weight: 700;
-  font-style: normal;
   width: 573px;
-  margin: -1px auto 0;
+  font-weight: 700;
+  background-image: none;
+  font-style: normal;
+  margin: -13px auto 0;
 }
 
 .u-section-4 .u-text-2 {
   font-size: 1.25rem;
   font-weight: 400;
   line-height: 1.6;
-  margin: 0 0 60px;
+  margin: 20px 0 80px;
+}
+
+.u-section-4 .u-btn-1 {
+  padding: 0;
+}
+
+.u-section-4 .u-btn-2 {
+  padding: 0;
+}
+
+.u-section-4 .u-btn-3 {
+  padding: 0;
 }
 
 @media (max-width: 1199px) {
   .u-section-4 .u-sheet-1 {
-    min-height: 705px;
+    min-height: 1557px;
   }
 
   .u-section-4 .u-image-1 {
@@ -593,7 +702,7 @@
   }
 
   .u-section-4 .u-group-1 {
-    min-height: 155px;
+    min-height: 202px;
     margin-top: 0;
     margin-right: initial;
     margin-left: initial;
@@ -605,32 +714,34 @@
   }
 
   .u-section-4 .u-text-2 {
-    margin-bottom: -1424px;
+    margin-top: 0;
+    margin-bottom: -597px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-4 .u-sheet-1 {
-    min-height: 732px;
+    min-height: 1685px;
   }
 
   .u-section-4 .u-text-1 {
-    width: 720px;
+    margin-left: 44px;
+    margin-right: 44px;
   }
 
   .u-section-4 .u-text-2 {
     width: 720px;
-    margin-bottom: -1397px;
+    margin-bottom: -80px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-4 .u-sheet-1 {
-    min-height: 759px;
+    min-height: 2091px;
   }
 
   .u-section-4 .u-group-1 {
-    min-height: 157px;
+    min-height: 256px;
     width: auto;
     margin-right: initial;
     margin-left: initial;
@@ -649,18 +760,17 @@
 
   .u-section-4 .u-text-2 {
     width: 540px;
-    margin-top: 20px;
-    margin-bottom: -1786px;
+    margin-bottom: -444px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-4 .u-sheet-1 {
-    min-height: 758px;
+    min-height: 2759px;
   }
 
   .u-section-4 .u-group-1 {
-    min-height: 129px;
+    min-height: 188px;
     width: auto;
     margin-right: initial;
     margin-left: initial;
@@ -668,12 +778,11 @@
 
   .u-section-4 .u-text-1 {
     width: 320px;
-    margin-right: -20px;
   }
 
   .u-section-4 .u-text-2 {
     width: 340px;
-    margin-bottom: 60px;
+    margin-bottom: -753px;
   }
 }.u-section-5 .u-sheet-1 {
   min-height: 595px;
@@ -681,8 +790,8 @@
 
 .u-section-5 .u-image-1 {
   height: 423px;
-  object-position: 50% 86.02%;
-  margin: 20px 0 0 auto;
+  object-position: 100% 11%;
+  margin: 20px auto 0 0;
 }
 
 .u-section-5 .u-group-1 {
@@ -699,19 +808,19 @@
   font-weight: 700;
   font-style: normal;
   width: 573px;
-  margin: -1px auto 0;
+  margin: -14px auto 0;
 }
 
 .u-section-5 .u-text-2 {
   font-size: 1.25rem;
   font-weight: 400;
   line-height: 1.6;
-  margin: 0 0 60px;
+  margin: 20px 0 80px;
 }
 
 @media (max-width: 1199px) {
   .u-section-5 .u-sheet-1 {
-    min-height: 705px;
+    min-height: 1085px;
   }
 
   .u-section-5 .u-image-1 {
@@ -733,28 +842,29 @@
   }
 
   .u-section-5 .u-text-2 {
-    margin-bottom: -1424px;
+    margin-bottom: -1044px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-5 .u-sheet-1 {
-    min-height: 732px;
+    min-height: 1181px;
   }
 
   .u-section-5 .u-text-1 {
-    width: 720px;
+    margin-left: -30px;
+    margin-right: -30px;
   }
 
   .u-section-5 .u-text-2 {
     width: 720px;
-    margin-bottom: -1397px;
+    margin-bottom: -948px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-5 .u-sheet-1 {
-    min-height: 759px;
+    min-height: 1309px;
   }
 
   .u-section-5 .u-group-1 {
@@ -777,14 +887,19 @@
 
   .u-section-5 .u-text-2 {
     width: 540px;
-    margin-top: 20px;
-    margin-bottom: -1786px;
+    margin-bottom: -1236px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-5 .u-sheet-1 {
     min-height: 758px;
+  }
+
+  .u-section-5 .u-image-1 {
+    object-position: 19.77% 11%;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-5 .u-group-1 {
@@ -796,27 +911,26 @@
 
   .u-section-5 .u-text-1 {
     width: 320px;
-    margin-right: -20px;
   }
 
   .u-section-5 .u-text-2 {
     width: 340px;
-    margin-bottom: 60px;
+    margin-bottom: 80px;
   }
 }.u-section-6 .u-sheet-1 {
-  min-height: 595px;
+  min-height: 1178px;
 }
 
 .u-section-6 .u-image-1 {
   height: 423px;
-  object-position: 50% 86.02%;
-  margin: 20px 0 0 auto;
+  object-position: 50% 55.68%;
+  margin: 18px auto 0 0;
 }
 
 .u-section-6 .u-group-1 {
   width: 800px;
   min-height: 149px;
-  margin: -99px 155px 0 auto;
+  margin: -97px 155px 0 auto;
 }
 
 .u-section-6 .u-container-layout-1 {
@@ -827,19 +941,35 @@
   font-weight: 700;
   font-style: normal;
   width: 573px;
-  margin: 0 auto;
+  margin: -13px auto 0;
 }
 
 .u-section-6 .u-text-2 {
   font-size: 1.25rem;
   font-weight: 400;
   line-height: 1.6;
-  margin: 0 0 60px;
+  margin: 19px 0 60px;
+}
+
+.u-section-6 .u-btn-1 {
+  padding: 0;
+}
+
+.u-section-6 .u-btn-2 {
+  padding: 0;
+}
+
+.u-section-6 .u-btn-3 {
+  padding: 0;
+}
+
+.u-section-6 .u-btn-4 {
+  padding: 0;
 }
 
 @media (max-width: 1199px) {
   .u-section-6 .u-sheet-1 {
-    min-height: 705px;
+    min-height: 1335px;
   }
 
   .u-section-6 .u-image-1 {
@@ -857,28 +987,29 @@
   }
 
   .u-section-6 .u-text-2 {
-    margin-bottom: -1424px;
+    margin-bottom: -794px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-6 .u-sheet-1 {
-    min-height: 732px;
+    min-height: 1495px;
   }
 
   .u-section-6 .u-text-1 {
-    width: 720px;
+    margin-left: -30px;
+    margin-right: -30px;
   }
 
   .u-section-6 .u-text-2 {
     width: 720px;
-    margin-bottom: -1397px;
+    margin-bottom: -634px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-6 .u-sheet-1 {
-    min-height: 759px;
+    min-height: 1753px;
   }
 
   .u-section-6 .u-group-1 {
@@ -901,14 +1032,13 @@
 
   .u-section-6 .u-text-2 {
     width: 540px;
-    margin-top: 20px;
-    margin-bottom: -1786px;
+    margin-bottom: -792px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-6 .u-sheet-1 {
-    min-height: 758px;
+    min-height: 778px;
   }
 
   .u-section-6 .u-group-1 {
@@ -920,25 +1050,412 @@
 
   .u-section-6 .u-text-1 {
     width: 320px;
-    margin-right: -20px;
   }
 
   .u-section-6 .u-text-2 {
     width: 340px;
-    margin-bottom: 60px;
+    margin-bottom: 80px;
   }
 }.u-section-7 .u-sheet-1 {
-  min-height: 100px;
+  min-height: 605px;
+}
+
+.u-section-7 .u-image-1 {
+  height: 423px;
+  object-position: 50% 78.94%;
+  margin: 20px auto 0 0;
+}
+
+.u-section-7 .u-group-1 {
+  width: 800px;
+  min-height: 149px;
+  margin: -99px 155px 0 auto;
+}
+
+.u-section-7 .u-container-layout-1 {
+  padding: 30px 30px 11px;
 }
 
 .u-section-7 .u-text-1 {
+  font-weight: 700;
+  font-style: normal;
+  line-height: 1.2;
+  margin: -7px 58px 0;
+}
+
+.u-section-7 .u-btn-1 {
+  padding: 0;
+}
+
+.u-section-7 .u-text-2 {
+  font-size: 1.25rem;
+  font-weight: 400;
+  line-height: 1.6;
+  margin: 20px 0 80px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-7 .u-sheet-1 {
+    min-height: 980px;
+  }
+
+  .u-section-7 .u-image-1 {
+    background-position: 50% 50%;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-7 .u-group-1 {
+    min-height: 155px;
+    margin-top: 0;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-section-7 .u-text-1 {
+    width: 573px;
+    margin-top: 0;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .u-section-7 .u-text-2 {
+    margin-bottom: -1149px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-7 .u-sheet-1 {
+    min-height: 954px;
+  }
+
+  .u-section-7 .u-text-1 {
+    margin-left: -30px;
+    margin-right: -30px;
+  }
+
+  .u-section-7 .u-text-2 {
+    width: 720px;
+    margin-bottom: -1175px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-7 .u-sheet-1 {
+    min-height: 1076px;
+  }
+
+  .u-section-7 .u-group-1 {
+    min-height: 213px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-7 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-7 .u-text-1 {
+    margin-left: 0;
+    margin-right: 0;
+    width: 520px;
+  }
+
+  .u-section-7 .u-text-2 {
+    width: 540px;
+    margin-bottom: -1469px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-7 .u-sheet-1 {
+    min-height: 758px;
+  }
+
+  .u-section-7 .u-group-1 {
+    min-height: 129px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-7 .u-text-1 {
+    width: 320px;
+  }
+
+  .u-section-7 .u-text-2 {
+    width: 340px;
+    margin-bottom: 80px;
+  }
+}.u-section-8 .u-sheet-1 {
+  min-height: 605px;
+}
+
+.u-section-8 .u-image-1 {
+  height: 423px;
+  object-position: 50% 86.02%;
+  margin: 20px auto 0 0;
+}
+
+.u-section-8 .u-group-1 {
+  width: 800px;
+  min-height: 149px;
+  margin: -99px 155px 0 auto;
+}
+
+.u-section-8 .u-container-layout-1 {
+  padding: 30px 30px 11px;
+}
+
+.u-section-8 .u-text-1 {
+  font-weight: 700;
+  font-style: normal;
+  width: 573px;
+  margin: -13px auto 0;
+}
+
+.u-section-8 .u-text-2 {
+  font-size: 1.25rem;
+  font-weight: 400;
+  line-height: 1.6;
+  margin: 20px 0 80px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-8 .u-sheet-1 {
+    min-height: 730px;
+  }
+
+  .u-section-8 .u-image-1 {
+    background-position: 50% 50%;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-8 .u-group-1 {
+    min-height: 155px;
+    margin-top: 0;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-section-8 .u-text-1 {
+    margin-top: 0;
+  }
+
+  .u-section-8 .u-text-2 {
+    margin-bottom: -1399px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-8 .u-sheet-1 {
+    min-height: 762px;
+  }
+
+  .u-section-8 .u-text-1 {
+    margin-left: -30px;
+    margin-right: -30px;
+  }
+
+  .u-section-8 .u-text-2 {
+    width: 720px;
+    margin-bottom: -1367px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-8 .u-sheet-1 {
+    min-height: 764px;
+  }
+
+  .u-section-8 .u-group-1 {
+    min-height: 157px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-8 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-8 .u-text-1 {
+    margin-left: 0;
+    margin-right: 0;
+    width: 520px;
+  }
+
+  .u-section-8 .u-text-2 {
+    width: 540px;
+    margin-bottom: -1781px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-8 .u-sheet-1 {
+    min-height: 758px;
+  }
+
+  .u-section-8 .u-group-1 {
+    min-height: 129px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-8 .u-text-1 {
+    width: 320px;
+  }
+
+  .u-section-8 .u-text-2 {
+    width: 340px;
+    margin-bottom: 80px;
+  }
+}.u-section-9 .u-sheet-1 {
+  min-height: 605px;
+}
+
+.u-section-9 .u-image-1 {
+  height: 423px;
+  object-position: 50% 86.02%;
+  margin: 20px auto 0 0;
+}
+
+.u-section-9 .u-group-1 {
+  width: 800px;
+  min-height: 149px;
+  margin: -99px 155px 0 auto;
+}
+
+.u-section-9 .u-container-layout-1 {
+  padding: 30px 30px 11px;
+}
+
+.u-section-9 .u-text-1 {
+  font-weight: 700;
+  font-style: normal;
+  width: 573px;
+  margin: -13px auto 0;
+}
+
+.u-section-9 .u-text-2 {
+  font-size: 1.25rem;
+  font-weight: 400;
+  line-height: 1.6;
+  margin: 20px 0 80px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-9 .u-sheet-1 {
+    min-height: 730px;
+  }
+
+  .u-section-9 .u-image-1 {
+    background-position: 50% 50%;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-9 .u-group-1 {
+    min-height: 155px;
+    margin-top: 0;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-section-9 .u-text-1 {
+    margin-top: 0;
+  }
+
+  .u-section-9 .u-text-2 {
+    margin-bottom: -1399px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-9 .u-sheet-1 {
+    min-height: 762px;
+  }
+
+  .u-section-9 .u-text-1 {
+    margin-left: -30px;
+    margin-right: -30px;
+  }
+
+  .u-section-9 .u-text-2 {
+    width: 720px;
+    margin-bottom: -1367px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-9 .u-sheet-1 {
+    min-height: 764px;
+  }
+
+  .u-section-9 .u-group-1 {
+    min-height: 157px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-9 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-9 .u-text-1 {
+    margin-left: 0;
+    margin-right: 0;
+    width: 520px;
+  }
+
+  .u-section-9 .u-text-2 {
+    width: 540px;
+    margin-bottom: -1781px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-9 .u-sheet-1 {
+    min-height: 758px;
+  }
+
+  .u-section-9 .u-group-1 {
+    min-height: 129px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-9 .u-text-1 {
+    width: 320px;
+  }
+
+  .u-section-9 .u-text-2 {
+    width: 340px;
+    margin-bottom: 80px;
+  }
+}.u-section-10 .u-sheet-1 {
+  min-height: 100px;
+}
+
+.u-section-10 .u-text-1 {
   font-size: 1.25rem;
   font-weight: normal;
   margin: 39px 20px;
 }
 
 @media (max-width: 1199px) {
-  .u-section-7 .u-text-1 {
+  .u-section-10 .u-text-1 {
     margin-left: 0;
     margin-right: 0;
   }
