--- a/docs/Green-Your-Lab.css
+++ b/docs/Green-Your-Lab.css
@@ -13,6 +13,7 @@
 .u-section-1 .u-image-1 {
   min-height: 665px;
   pointer-events: auto;
+  background-image: url("images/GreenYourLab.jpg");
   background-position: 50% 50%;
 }
 
@@ -42,7 +43,6 @@
 .u-section-1 .u-text-2 {
   font-family: Rosario;
   font-size: 1.5rem;
-  background-image: none;
   font-style: italic;
   margin: 48px 51px 0 113px;
 }
@@ -106,11 +106,6 @@
     margin-right: -290px;
   }
 
-  .u-section-1 .u-container-layout-2 {
-    padding-top: 0;
-    padding-bottom: 0;
-  }
-
   .u-section-1 .u-text-1 {
     font-size: 3.75rem;
     width: auto;
@@ -121,9 +116,8 @@
 
   .u-section-1 .u-text-2 {
     width: auto;
-    font-size: 1.25rem;
     margin-top: 32px;
-    margin-left: 91px;
+    margin-left: 20px;
   }
 
   .u-section-1 .u-layout-cell-2 {
@@ -257,7 +251,7 @@
 .u-section-2 .u-image-1 {
   min-height: 655px;
   pointer-events: auto;
-  background-image: linear-gradient(0deg, rgba(204,211,219,0.05), rgba(204,211,219,0.05));
+  background-image: linear-gradient(0deg, rgba(204,211,219,0.05), rgba(204,211,219,0.05)), url("images/backgroundGreenYourLab.jpg");
   background-position: 0% 50%;
 }
 
@@ -266,8 +260,7 @@
 }
 
 .u-section-2 .u-text-1 {
-  font-size: 2.5rem;
-  font-weight: 700;
+  font-weight: bold;
   margin: 0;
 }
 
@@ -282,7 +275,7 @@
 .u-section-2 .u-image-2 {
   min-height: 655px;
   pointer-events: auto;
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.05), rgba(0,0,0,0.05));
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.05), rgba(0,0,0,0.05)), url("images/ScienceLaboratoryExpert.jpg");
   background-position: 50% 50%;
 }
 
@@ -305,7 +298,7 @@
 
   .u-section-2 .u-image-2 {
     min-height: 476px;
-    background-position: 74.63% 50%;
+    background-position: 47.9% 50%;
   }
 }
 
@@ -329,11 +322,7 @@
 
   .u-section-2 .u-image-2 {
     min-height: 722px;
-    background-position: 75.86% 50%;
-  }
-
-  .u-section-2 .u-container-layout-2 {
-    padding: 0;
+    background-position: 55.49% 50%;
   }
 }
 
@@ -354,7 +343,7 @@
 
   .u-section-2 .u-image-2 {
     min-height: 591px;
-    background-position: 84.28% 50%;
+    background-position: 55.78% 50%;
   }
 }
 
@@ -373,7 +362,7 @@
 
   .u-section-2 .u-image-2 {
     min-height: 372px;
-    background-position: 87.04% 50%;
+    background-position: 76.23% 50%;
   }
 }.u-section-3 {
   background-image: none;
@@ -384,8 +373,8 @@
 }
 
 .u-section-3 .u-text-1 {
-  font-weight: 700;
   width: 740px;
+  font-weight: bold;
   margin: 37px auto 0;
 }
 
@@ -617,14 +606,14 @@
 
 @media (max-width: 767px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 1642px;
+    min-height: 1677px;
   }
 
   .u-section-3 .u-text-1 {
-    margin-top: 0;
+    width: 540px;
+    margin-top: 35px;
     margin-left: 0;
     margin-right: 0;
-    width: 540px;
   }
 
   .u-section-3 .u-container-layout-1 {
@@ -686,8 +675,13 @@
 }
 
 @media (max-width: 575px) {
+  .u-section-3 .u-sheet-1 {
+    min-height: 1682px;
+  }
+
   .u-section-3 .u-text-1 {
     width: 340px;
+    margin-top: 40px;
   }
 
   .u-section-3 .u-text-2 {
@@ -739,7 +733,7 @@
 
 .u-section-4 .u-text-1 {
   font-size: 2.5rem;
-  font-weight: 700;
+  font-weight: bold;
   margin: 0;
 }
 
@@ -795,7 +789,7 @@
 .u-section-4 .u-text-5 {
   font-size: 1.5rem;
   font-weight: 700;
-  margin: 28px 10px 0;
+  margin: 28px 28px 0;
 }
 
 .u-section-4 .u-text-6 {
@@ -961,11 +955,16 @@
   .u-section-4 .u-container-layout-1 {
     padding-left: 38px;
     padding-right: 38px;
-    padding-bottom: 0;
   }
 
   .u-section-4 .u-layout-cell-1 {
     min-height: 100px;
+  }
+
+  .u-section-4 .u-image-1 {
+    object-position: 50% 53.44%;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-4 .u-text-2 {
@@ -1216,6 +1215,7 @@
 .u-section-5 .u-image-1 {
   min-height: 655px;
   pointer-events: auto;
+  background-image: url("images/contactGreenYourLab.jpg");
   background-position: 50% 50%;
 }
 
@@ -1259,6 +1259,7 @@
 }
 
 .u-section-5 .u-image-2 {
+  background-image: url("images/twitter.png");
   background-position: 50% 50%;
 }
 
@@ -1267,6 +1268,7 @@
 }
 
 .u-section-5 .u-image-3 {
+  background-image: url("images/facebook.png");
   background-position: 50% 50%;
 }
 
@@ -1275,6 +1277,7 @@
 }
 
 .u-section-5 .u-image-4 {
+  background-image: url("images/blogger.png");
   background-position: 50% 50%;
 }
 
