--- a/docs/Sustainability.css
+++ b/docs/Sustainability.css
@@ -12,6 +12,7 @@
 .u-section-1 .u-image-1 {
   min-height: 441px;
   pointer-events: auto;
+  background-image: url("images/GreenYourLab.jpg");
   background-position: 50% 50%;
 }
 
@@ -39,10 +40,6 @@
 }
 
 .u-section-1 .u-text-2 {
-  font-family: Rosario;
-  font-size: 1.5rem;
-  background-image: none;
-  font-style: italic;
   width: 426px;
   margin: 33px auto 0;
 }
@@ -63,11 +60,11 @@
   grid-template-columns: calc(50% - 5px) calc(50% - 5px);
   grid-template-rows: auto;
   grid-gap: 10px 10px;
-  height: auto;
   margin: -69px calc(((100% - 1140px) / 2) + -63px) 10px auto;
 }
 
 .u-section-1 .u-image-2 {
+  background-image: url("images/twitter.png");
   background-position: 50% 50%;
 }
 
@@ -76,6 +73,7 @@
 }
 
 .u-section-1 .u-image-3 {
+  background-image: url("images/facebook.png");
   background-position: 50% 50%;
 }
 
@@ -97,11 +95,18 @@
     margin-right: -390px;
   }
 
+  .u-section-1 .u-text-2 {
+    font-size: 1.5rem;
+    font-family: Rosario;
+    font-style: italic;
+  }
+
   .u-section-1 .u-layout-cell-2 {
     min-height: 432px;
   }
 
   .u-section-1 .u-list-1 {
+    height: auto;
     margin-right: calc(((100% - 940px) / 2) + -31px);
   }
 }
@@ -117,7 +122,6 @@
   }
 
   .u-section-1 .u-container-layout-1 {
-    padding-bottom: 0;
     padding-left: 30px;
     padding-right: 30px;
   }
@@ -343,10 +347,6 @@
 @media (max-width: 991px) {
   .u-section-2 .u-group-1 {
     width: 720px;
-  }
-
-  .u-section-2 .u-container-layout-1 {
-    padding-bottom: 0;
   }
 
   .u-section-2 .u-btn-1 {
