--- a/docs/Green-Lab.css
+++ b/docs/Green-Lab.css
@@ -1,18 +1,17 @@
 .u-section-1 {
-  min-height: 442px;
+  min-height: 378px;
 }
 
 .u-section-1 .u-layout-wrap-1 {
   pointer-events: auto;
+  background-image: none;
   margin-top: 0;
   margin-bottom: 0;
-  background-image: none;
 }
 
 .u-section-1 .u-image-1 {
-  min-height: 441px;
+  min-height: 378px;
   pointer-events: auto;
-  background-image: url("images/GreenYourLab.jpg");
   background-position: 50% 50%;
 }
 
@@ -21,7 +20,7 @@
 }
 
 .u-section-1 .u-group-1 {
-  min-height: 287px;
+  min-height: 215px;
   width: 610px;
   background-image: none;
   margin: 33px -408px 0 auto;
@@ -30,7 +29,7 @@
 .u-section-1 .u-container-layout-2 {
   padding-left: 20px;
   padding-top: 30px;
-  padding-bottom: 28px;
+  padding-bottom: 27px;
 }
 
 .u-section-1 .u-text-1 {
@@ -39,13 +38,8 @@
   margin: 0 40px 0 20px;
 }
 
-.u-section-1 .u-text-2 {
-  width: 426px;
-  margin: 33px auto 0;
-}
-
 .u-section-1 .u-layout-cell-2 {
-  min-height: 441px;
+  min-height: 378px;
   pointer-events: auto;
   background-image: none;
 }
@@ -60,11 +54,10 @@
   grid-template-columns: calc(50% - 5px) calc(50% - 5px);
   grid-template-rows: auto;
   grid-gap: 10px 10px;
-  margin: -69px calc(((100% - 1140px) / 2) + -63px) 10px auto;
+  margin: -68px calc(((100% - 1140px) / 2) + -63px) 8px auto;
 }
 
 .u-section-1 .u-image-2 {
-  background-image: url("images/twitter.png");
   background-position: 50% 50%;
 }
 
@@ -73,7 +66,6 @@
 }
 
 .u-section-1 .u-image-3 {
-  background-image: url("images/facebook.png");
   background-position: 50% 50%;
 }
 
@@ -83,26 +75,23 @@
 
 @media (max-width: 1199px) {
   .u-section-1 {
-    min-height: 433px;
+    min-height: 346px;
   }
 
   .u-section-1 .u-image-1 {
-    min-height: 402px;
+    min-height: 370px;
     background-position: 100% 47.47%;
   }
 
   .u-section-1 .u-group-1 {
-    margin-right: -390px;
-  }
-
-  .u-section-1 .u-text-2 {
-    font-size: 1.5rem;
-    font-family: Rosario;
-    font-style: italic;
+    min-height: 216px;
+    width: 611px;
+    margin-top: 20px;
+    margin-right: -391px;
   }
 
   .u-section-1 .u-layout-cell-2 {
-    min-height: 432px;
+    min-height: 370px;
   }
 
   .u-section-1 .u-list-1 {
@@ -113,44 +102,40 @@
 
 @media (max-width: 991px) {
   .u-section-1 {
-    min-height: 359px;
+    min-height: 272px;
   }
 
   .u-section-1 .u-image-1 {
-    min-height: 358px;
-    background-position: 100% 40.2%;
+    min-height: 272px;
+    background-position: 100% 48.67%;
+    background-size: 115%;
   }
 
   .u-section-1 .u-container-layout-1 {
-    padding-left: 30px;
-    padding-right: 30px;
+    padding: 19px 30px 0;
   }
 
   .u-section-1 .u-group-1 {
-    min-height: 253px;
-    width: 516px;
-    margin-top: -11px;
-    margin-right: -293px;
+    min-height: 172px;
+    width: 512px;
+    margin-top: 0;
+    margin-right: -291px;
   }
 
   .u-section-1 .u-container-layout-2 {
-    padding-bottom: 29px;
+    padding-top: 15px;
+    padding-bottom: 20px;
   }
 
   .u-section-1 .u-text-1 {
     font-size: 3.75rem;
+    margin-top: 1px;
     margin-right: 51px;
     margin-left: 9px;
   }
 
-  .u-section-1 .u-text-2 {
-    font-size: 1.25rem;
-    width: 376px;
-    margin-top: 29px;
-  }
-
   .u-section-1 .u-layout-cell-2 {
-    min-height: 331px;
+    min-height: 283px;
   }
 
   .u-section-1 .u-container-layout-3 {
@@ -164,23 +149,21 @@
 
 @media (max-width: 767px) {
   .u-section-1 {
-    min-height: 718px;
+    min-height: 641px;
   }
 
   .u-section-1 .u-image-1 {
-    min-height: 717px;
-    background-position: 38.58% 50%;
+    min-height: 641px;
+    background-position: 38.43% 0%;
+    background-size: auto 125%;
   }
 
   .u-section-1 .u-container-layout-1 {
-    padding-top: 1px;
-    padding-left: 0;
-    padding-right: 0;
+    padding: 1px 0 30px;
   }
 
   .u-section-1 .u-group-1 {
-    min-height: 264px;
-    margin-top: 0;
+    min-height: 229px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
@@ -192,17 +175,13 @@
 
   .u-section-1 .u-text-1 {
     width: 440px;
+    margin-top: 21px;
     margin-left: auto;
     margin-right: auto;
   }
 
-  .u-section-1 .u-text-2 {
-    width: 362px;
-    margin-top: 31px;
-  }
-
   .u-section-1 .u-layout-cell-2 {
-    min-height: 784px;
+    min-height: 670px;
   }
 
   .u-section-1 .u-container-layout-3 {
@@ -211,7 +190,7 @@
   }
 
   .u-section-1 .u-list-1 {
-    margin-right: calc(((100% - 540px) / 2) + -32px);
+    margin-right: calc(((100% - 540px) / 2));
   }
 
   .u-section-1 .u-container-layout-4 {
@@ -227,52 +206,44 @@
 
 @media (max-width: 575px) {
   .u-section-1 {
-    min-height: 649px;
+    min-height: 544px;
   }
 
   .u-section-1 .u-image-1 {
-    min-height: 648px;
-    background-position: 42.24% 0%;
+    min-height: 544px;
+    background-position: 42.3% 0%;
     background-size: auto 130%;
   }
 
   .u-section-1 .u-container-layout-1 {
-    padding-top: 30px;
+    padding-top: 0;
   }
 
   .u-section-1 .u-group-1 {
-    min-height: 281px;
-    margin-top: -30px;
+    min-height: 165px;
     width: auto;
     margin-right: initial;
     margin-left: initial;
   }
 
   .u-section-1 .u-container-layout-2 {
-    padding-left: 0;
-    padding-right: 0;
-    padding-bottom: 32px;
+    padding: 30px 0 31px;
   }
 
   .u-section-1 .u-text-1 {
     font-size: 3rem;
-    width: 330px;
-    margin-left: 40px;
-    margin-right: 40px;
-  }
-
-  .u-section-1 .u-text-2 {
-    margin-left: 7px;
-    margin-right: 7px;
-    width: 426px;
+    width: 351px;
+    margin-top: 0;
   }
 
   .u-section-1 .u-layout-cell-2 {
-    min-height: 494px;
+    min-height: 422px;
   }
 
   .u-section-1 .u-list-1 {
+    margin-top: -74px;
     margin-right: calc(((100% - 340px) / 2));
+    margin-bottom: 14px;
   }
 }.u-section-2 .u-sheet-1 {
   min-height: 67px;
@@ -347,6 +318,10 @@
 @media (max-width: 991px) {
   .u-section-2 .u-group-1 {
     width: 720px;
+  }
+
+  .u-section-2 .u-container-layout-1 {
+    padding-bottom: 0;
   }
 
   .u-section-2 .u-btn-1 {
