--- a/docs/Green-Lab.css
+++ b/docs/Green-Lab.css
@@ -527,17 +527,15 @@
 
 .u-section-3 .u-text-1 {
   line-height: 2.2;
-  margin: -203px -20px 0 190px;
+  margin: -204px -20px 0 190px;
 }
 
 .u-section-3 .u-btn-1 {
+  font-weight: 700;
   padding: 0;
 }
 
 .u-section-3 .u-btn-2 {
-  text-align: left;
-  font-family: 'Open Sans',sans-serif;
-  font-size: 1rem;
   padding: 0;
 }
 
@@ -546,30 +544,6 @@
 }
 
 .u-section-3 .u-btn-4 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-5 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-6 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-7 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-8 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-9 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-10 {
   padding: 0;
 }
 
@@ -595,43 +569,12 @@
   margin: -203px -20px 0 190px;
 }
 
-.u-section-3 .u-btn-11 {
+.u-section-3 .u-btn-5 {
+  font-weight: 700;
   padding: 0;
 }
 
-.u-section-3 .u-btn-12 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-13 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-14 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-15 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-16 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-17 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-18 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-19 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-20 {
+.u-section-3 .u-btn-6 {
   padding: 0;
 }
 
@@ -657,43 +600,12 @@
   margin: -209px -20px 0 190px;
 }
 
-.u-section-3 .u-btn-21 {
+.u-section-3 .u-btn-7 {
+  font-weight: 700;
   padding: 0;
 }
 
-.u-section-3 .u-btn-22 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-23 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-24 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-25 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-26 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-27 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-28 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-29 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-30 {
+.u-section-3 .u-btn-8 {
   padding: 0;
 }
 
@@ -719,43 +631,8 @@
   margin: -209px -20px 0 190px;
 }
 
-.u-section-3 .u-btn-31 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-32 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-33 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-34 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-35 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-36 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-37 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-38 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-39 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-40 {
+.u-section-3 .u-btn-9 {
+  font-weight: 700;
   padding: 0;
 }
 
@@ -781,43 +658,8 @@
   margin: -209px -20px 0 190px;
 }
 
-.u-section-3 .u-btn-41 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-42 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-43 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-44 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-45 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-46 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-47 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-48 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-49 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-50 {
+.u-section-3 .u-btn-10 {
+  font-weight: 700;
   padding: 0;
 }
 
@@ -843,43 +685,16 @@
   margin: -209px -20px 0 190px;
 }
 
-.u-section-3 .u-btn-51 {
+.u-section-3 .u-btn-11 {
+  font-weight: 700;
   padding: 0;
 }
 
-.u-section-3 .u-btn-52 {
+.u-section-3 .u-btn-12 {
   padding: 0;
 }
 
-.u-section-3 .u-btn-53 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-54 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-55 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-56 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-57 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-58 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-59 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-60 {
+.u-section-3 .u-btn-13 {
   padding: 0;
 }
 
@@ -905,43 +720,8 @@
   margin: -209px -20px 0 190px;
 }
 
-.u-section-3 .u-btn-61 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-62 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-63 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-64 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-65 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-66 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-67 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-68 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-69 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-70 {
+.u-section-3 .u-btn-14 {
+  font-weight: 700;
   padding: 0;
 }
 
