--- a/docs/Sustainability.css
+++ b/docs/Sustainability.css
@@ -484,42 +484,7 @@
 }
 
 .u-section-3 .u-btn-1 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-2 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-3 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-4 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-5 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-6 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-7 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-8 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-9 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-10 {
+  font-weight: 700;
   padding: 0;
 }
 
@@ -545,43 +510,7 @@
   margin: -209px -20px 0 190px;
 }
 
-.u-section-3 .u-btn-11 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-12 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-13 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-14 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-15 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-16 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-17 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-18 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-19 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-20 {
+.u-section-3 .u-btn-2 {
   padding: 0;
 }
 
@@ -607,43 +536,8 @@
   margin: -209px -20px 0 190px;
 }
 
-.u-section-3 .u-btn-21 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-22 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-23 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-24 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-25 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-26 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-27 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-28 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-29 {
-  padding: 0;
-}
-
-.u-section-3 .u-btn-30 {
+.u-section-3 .u-btn-3 {
+  font-weight: 700;
   padding: 0;
 }
 
