--- a/docs/Sustainability.css
+++ b/docs/Sustainability.css
@@ -476,6 +476,10 @@
   padding: 0;
 }
 
+.u-section-3 .u-btn-2 {
+  padding: 0;
+}
+
 .u-section-3 .u-tab-pane-2 {
   background-image: none;
   margin-top: 0;
@@ -498,7 +502,7 @@
   margin: -209px -20px 0 190px;
 }
 
-.u-section-3 .u-btn-2 {
+.u-section-3 .u-btn-3 {
   padding: 0;
 }
 
