--- a/docs/Green-Lab-Other.css
+++ b/docs/Green-Lab-Other.css
@@ -1000,7 +1000,7 @@
 
 @media (max-width: 1199px) {
   .u-section-6 .u-sheet-1 {
-    min-height: 730px;
+    min-height: 762px;
   }
 
   .u-section-6 .u-image-1 {
@@ -1022,29 +1022,35 @@
   }
 
   .u-section-6 .u-text-2 {
-    margin-bottom: -1399px;
+    margin-bottom: -1367px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-6 .u-sheet-1 {
-    min-height: 762px;
+    min-height: 605px;
+  }
+
+  .u-section-6 .u-group-1 {
+    min-height: 149px;
+    margin-top: -99px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-6 .u-text-1 {
-    margin-left: -30px;
-    margin-right: -30px;
+    margin-top: -13px;
   }
 
   .u-section-6 .u-text-2 {
-    width: 720px;
-    margin-bottom: -1367px;
+    margin-bottom: 80px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-6 .u-sheet-1 {
-    min-height: 764px;
+    min-height: 729px;
   }
 
   .u-section-6 .u-group-1 {
@@ -1067,7 +1073,7 @@
 
   .u-section-6 .u-text-2 {
     width: 540px;
-    margin-bottom: -1781px;
+    margin-bottom: -1816px;
   }
 }
 
@@ -1084,6 +1090,8 @@
   }
 
   .u-section-6 .u-text-1 {
+    margin-left: auto;
+    margin-right: auto;
     width: 320px;
   }
 
