--- a/docs/Ask-Green-Your-Lab.css
+++ b/docs/Ask-Green-Your-Lab.css
@@ -1026,8 +1026,9 @@
   }
 
   .u-section-6 .u-text-1 {
-    margin-left: -30px;
-    margin-right: -30px;
+    margin-left: 44px;
+    margin-right: 44px;
+    width: auto;
   }
 
   .u-section-6 .u-text-2 {
@@ -1162,17 +1163,18 @@
 
 @media (max-width: 991px) {
   .u-section-7 .u-sheet-1 {
-    min-height: 954px;
+    min-height: 1012px;
   }
 
   .u-section-7 .u-text-1 {
-    margin-left: -30px;
-    margin-right: -30px;
+    margin-left: 44px;
+    margin-right: 44px;
+    width: auto;
   }
 
   .u-section-7 .u-text-2 {
     width: 720px;
-    margin-bottom: -1175px;
+    margin-bottom: -1117px;
   }
 }
 
