--- a/docs/Green-Lab.css
+++ b/docs/Green-Lab.css
@@ -624,6 +624,18 @@
   padding: 0;
 }
 
+.u-section-3 .u-btn-10 {
+  padding: 0;
+}
+
+.u-section-3 .u-btn-11 {
+  padding: 0;
+}
+
+.u-section-3 .u-btn-12 {
+  padding: 0;
+}
+
 .u-section-3 .u-tab-pane-5 {
   background-image: none;
   margin-top: 0;
@@ -646,7 +658,7 @@
   margin: -209px -20px 0 190px;
 }
 
-.u-section-3 .u-btn-10 {
+.u-section-3 .u-btn-13 {
   font-weight: 700;
   padding: 0;
 }
@@ -673,16 +685,16 @@
   margin: -209px -20px 0 190px;
 }
 
-.u-section-3 .u-btn-11 {
+.u-section-3 .u-btn-14 {
   font-weight: 700;
   padding: 0;
 }
 
-.u-section-3 .u-btn-12 {
+.u-section-3 .u-btn-15 {
   padding: 0;
 }
 
-.u-section-3 .u-btn-13 {
+.u-section-3 .u-btn-16 {
   padding: 0;
 }
 
