--- a/docs/Sustainability-Industry.css
+++ b/docs/Sustainability-Industry.css
@@ -592,15 +592,12 @@
 
   .u-section-4 .u-text-1 {
     margin-top: 0;
+    margin-left: 0;
+    margin-right: 0;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-4 .u-text-1 {
-    margin-left: -30px;
-    margin-right: -30px;
-  }
-
   .u-section-4 .u-text-2 {
     width: 720px;
   }
@@ -624,8 +621,6 @@
   }
 
   .u-section-4 .u-text-1 {
-    margin-left: 0;
-    margin-right: 0;
     width: 520px;
   }
 
@@ -717,8 +712,8 @@
 
 @media (max-width: 991px) {
   .u-section-5 .u-text-1 {
-    margin-left: -30px;
-    margin-right: -30px;
+    margin-left: 44px;
+    margin-right: 44px;
   }
 
   .u-section-5 .u-text-2 {
@@ -796,8 +791,7 @@
 .u-section-6 .u-text-1 {
   font-weight: 700;
   font-style: normal;
-  width: 573px;
-  margin: -13px auto 0;
+  margin: -13px 0 0;
 }
 
 .u-section-6 .u-text-2 {
@@ -840,11 +834,6 @@
     min-height: 2209px;
   }
 
-  .u-section-6 .u-text-1 {
-    margin-left: -30px;
-    margin-right: -30px;
-  }
-
   .u-section-6 .u-text-2 {
     width: 720px;
     margin-bottom: 80px;
@@ -869,8 +858,6 @@
   }
 
   .u-section-6 .u-text-1 {
-    margin-left: 0;
-    margin-right: 0;
     width: 520px;
   }
 
@@ -966,8 +953,8 @@
   }
 
   .u-section-7 .u-text-1 {
-    margin-left: -30px;
-    margin-right: -30px;
+    margin-left: 44px;
+    margin-right: 44px;
   }
 
   .u-section-7 .u-text-2 {
