v32 add water articles + small errors

--- a/docs/Green-Lab.css
+++ b/docs/Green-Lab.css
@@ -566,6 +566,18 @@
   padding: 0;
 }
 
+.u-section-3 .u-btn-7 {
+  padding: 0;
+}
+
+.u-section-3 .u-btn-8 {
+  padding: 0;
+}
+
+.u-section-3 .u-btn-9 {
+  padding: 0;
+}
+
 .u-section-3 .u-tab-pane-3 {
   background-image: none;
   margin-top: 0;
@@ -588,12 +600,12 @@
   margin: -209px -20px 0 190px;
 }
 
-.u-section-3 .u-btn-7 {
+.u-section-3 .u-btn-10 {
   font-weight: 700;
   padding: 0;
 }
 
-.u-section-3 .u-btn-8 {
+.u-section-3 .u-btn-11 {
   padding: 0;
 }
 
@@ -619,20 +631,20 @@
   margin: -209px -20px 0 190px;
 }
 
-.u-section-3 .u-btn-9 {
+.u-section-3 .u-btn-12 {
   font-weight: 700;
   padding: 0;
 }
 
-.u-section-3 .u-btn-10 {
+.u-section-3 .u-btn-13 {
   padding: 0;
 }
 
-.u-section-3 .u-btn-11 {
+.u-section-3 .u-btn-14 {
   padding: 0;
 }
 
-.u-section-3 .u-btn-12 {
+.u-section-3 .u-btn-15 {
   padding: 0;
 }
 
@@ -658,7 +670,7 @@
   margin: -209px -20px 0 190px;
 }
 
-.u-section-3 .u-btn-13 {
+.u-section-3 .u-btn-16 {
   font-weight: 700;
   padding: 0;
 }
@@ -685,16 +697,16 @@
   margin: -209px -20px 0 190px;
 }
 
-.u-section-3 .u-btn-14 {
+.u-section-3 .u-btn-17 {
   font-weight: 700;
   padding: 0;
 }
 
-.u-section-3 .u-btn-15 {
+.u-section-3 .u-btn-18 {
   padding: 0;
 }
 
-.u-section-3 .u-btn-16 {
+.u-section-3 .u-btn-19 {
   padding: 0;
 }
 
