--- a/docs/Green-Lab-Waste.css
+++ b/docs/Green-Lab-Waste.css
@@ -540,7 +540,7 @@
 
 .u-section-4 .u-image-1 {
   height: 423px;
-  object-position: 50% 86.02%;
+  object-position: 50% 35.82%;
   margin: 20px auto 0 0;
 }
 
@@ -557,8 +557,7 @@
 .u-section-4 .u-text-1 {
   font-weight: 700;
   font-style: normal;
-  width: 573px;
-  margin: -13px auto 0;
+  margin: -13px 0 0;
 }
 
 .u-section-4 .u-text-2 {
@@ -568,9 +567,13 @@
   margin: 20px 0 80px;
 }
 
+.u-section-4 .u-btn-1 {
+  padding: 0;
+}
+
 @media (max-width: 1199px) {
   .u-section-4 .u-sheet-1 {
-    min-height: 1018px;
+    min-height: 1828px;
   }
 
   .u-section-4 .u-image-1 {
@@ -592,29 +595,30 @@
   }
 
   .u-section-4 .u-text-2 {
-    margin-bottom: -1111px;
+    margin-bottom: -301px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-4 .u-sheet-1 {
-    min-height: 1210px;
+    min-height: 2155px;
   }
 
-  .u-section-4 .u-text-1 {
-    margin-left: -30px;
-    margin-right: -30px;
+  .u-section-4 .u-image-1 {
+    object-position: 50% 0%;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-4 .u-text-2 {
     width: 720px;
-    margin-bottom: -919px;
+    margin-bottom: 26px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-4 .u-sheet-1 {
-    min-height: 1212px;
+    min-height: 2625px;
   }
 
   .u-section-4 .u-group-1 {
@@ -630,14 +634,12 @@
   }
 
   .u-section-4 .u-text-1 {
-    margin-left: 0;
-    margin-right: 0;
     width: 520px;
   }
 
   .u-section-4 .u-text-2 {
     width: 540px;
-    margin-bottom: -1333px;
+    margin-bottom: 80px;
   }
 }
 
@@ -659,7 +661,6 @@
 
   .u-section-4 .u-text-2 {
     width: 340px;
-    margin-bottom: 80px;
   }
 }.u-section-5 .u-sheet-1 {
   min-height: 605px;
@@ -667,7 +668,7 @@
 
 .u-section-5 .u-image-1 {
   height: 423px;
-  object-position: 50% 78.94%;
+  object-position: 50% 22.96%;
   margin: 20px auto 0 0;
 }
 
@@ -684,12 +685,8 @@
 .u-section-5 .u-text-1 {
   font-weight: 700;
   font-style: normal;
-  line-height: 1.2;
-  margin: -7px 58px 0;
-}
-
-.u-section-5 .u-btn-1 {
-  padding: 0;
+  width: 573px;
+  margin: -13px auto 0;
 }
 
 .u-section-5 .u-text-2 {
@@ -701,7 +698,7 @@
 
 @media (max-width: 1199px) {
   .u-section-5 .u-sheet-1 {
-    min-height: 980px;
+    min-height: 1018px;
   }
 
   .u-section-5 .u-image-1 {
@@ -719,40 +716,37 @@
   }
 
   .u-section-5 .u-text-1 {
-    width: 573px;
     margin-top: 0;
-    margin-left: auto;
-    margin-right: auto;
   }
 
   .u-section-5 .u-text-2 {
-    margin-bottom: -1149px;
+    margin-bottom: -1111px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-5 .u-sheet-1 {
-    min-height: 1012px;
+    min-height: 1178px;
   }
 
   .u-section-5 .u-text-1 {
-    margin-left: -30px;
-    margin-right: -30px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-5 .u-text-2 {
     width: 720px;
-    margin-bottom: -1117px;
+    margin-bottom: -951px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-5 .u-sheet-1 {
-    min-height: 1076px;
+    min-height: 1180px;
   }
 
   .u-section-5 .u-group-1 {
-    min-height: 213px;
+    min-height: 157px;
     width: auto;
     margin-right: initial;
     margin-left: initial;
@@ -764,14 +758,12 @@
   }
 
   .u-section-5 .u-text-1 {
-    margin-left: 0;
-    margin-right: 0;
     width: 520px;
   }
 
   .u-section-5 .u-text-2 {
     width: 540px;
-    margin-bottom: -1469px;
+    margin-bottom: -1365px;
   }
 }
 
@@ -801,7 +793,7 @@
 
 .u-section-6 .u-image-1 {
   height: 423px;
-  object-position: 50% 50.84%;
+  object-position: 50% 41.86%;
   margin: 20px auto 0 0;
 }
 
@@ -818,8 +810,7 @@
 .u-section-6 .u-text-1 {
   font-weight: 700;
   font-style: normal;
-  width: 573px;
-  margin: -13px auto 0;
+  margin: -13px 0 0;
 }
 
 .u-section-6 .u-text-2 {
@@ -831,7 +822,7 @@
 
 @media (max-width: 1199px) {
   .u-section-6 .u-sheet-1 {
-    min-height: 762px;
+    min-height: 1853px;
   }
 
   .u-section-6 .u-image-1 {
@@ -853,29 +844,24 @@
   }
 
   .u-section-6 .u-text-2 {
-    margin-bottom: -1367px;
+    margin-bottom: -276px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-6 .u-sheet-1 {
-    min-height: 794px;
-  }
-
-  .u-section-6 .u-text-1 {
-    margin-left: -30px;
-    margin-right: -30px;
+    min-height: 2148px;
   }
 
   .u-section-6 .u-text-2 {
     width: 720px;
-    margin-bottom: -1335px;
+    margin-bottom: 19px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-6 .u-sheet-1 {
-    min-height: 828px;
+    min-height: 2603px;
   }
 
   .u-section-6 .u-group-1 {
@@ -891,14 +877,12 @@
   }
 
   .u-section-6 .u-text-1 {
-    margin-left: 0;
-    margin-right: 0;
     width: 520px;
   }
 
   .u-section-6 .u-text-2 {
     width: 540px;
-    margin-bottom: -1717px;
+    margin-bottom: 58px;
   }
 }
 
@@ -923,17 +907,273 @@
     margin-bottom: 80px;
   }
 }.u-section-7 .u-sheet-1 {
-  min-height: 100px;
+  min-height: 605px;
+}
+
+.u-section-7 .u-image-1 {
+  height: 423px;
+  object-position: 50% 78.94%;
+  margin: 20px auto 0 0;
+}
+
+.u-section-7 .u-group-1 {
+  width: 800px;
+  min-height: 149px;
+  margin: -99px 155px 0 auto;
+}
+
+.u-section-7 .u-container-layout-1 {
+  padding: 30px 30px 11px;
 }
 
 .u-section-7 .u-text-1 {
+  font-weight: 700;
+  font-style: normal;
+  line-height: 1.2;
+  margin: -7px 0 0;
+}
+
+.u-section-7 .u-btn-1 {
+  padding: 0;
+}
+
+.u-section-7 .u-text-2 {
+  font-size: 1.25rem;
+  font-weight: 400;
+  line-height: 1.6;
+  margin: 20px 0 80px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-7 .u-sheet-1 {
+    min-height: 980px;
+  }
+
+  .u-section-7 .u-image-1 {
+    background-position: 50% 50%;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-7 .u-group-1 {
+    min-height: 155px;
+    margin-top: 0;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-section-7 .u-text-1 {
+    width: 573px;
+    margin-top: 0;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .u-section-7 .u-text-2 {
+    margin-bottom: -1149px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-7 .u-sheet-1 {
+    min-height: 1012px;
+  }
+
+  .u-section-7 .u-text-1 {
+    margin-left: -30px;
+    margin-right: -30px;
+  }
+
+  .u-section-7 .u-text-2 {
+    width: 720px;
+    margin-bottom: -1117px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-7 .u-sheet-1 {
+    min-height: 1076px;
+  }
+
+  .u-section-7 .u-group-1 {
+    min-height: 213px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-7 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-7 .u-text-1 {
+    margin-left: 0;
+    margin-right: 0;
+    width: 520px;
+  }
+
+  .u-section-7 .u-text-2 {
+    width: 540px;
+    margin-bottom: -1469px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-7 .u-sheet-1 {
+    min-height: 758px;
+  }
+
+  .u-section-7 .u-group-1 {
+    min-height: 129px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-7 .u-text-1 {
+    width: 320px;
+  }
+
+  .u-section-7 .u-text-2 {
+    width: 340px;
+    margin-bottom: 80px;
+  }
+}.u-section-8 .u-sheet-1 {
+  min-height: 605px;
+}
+
+.u-section-8 .u-image-1 {
+  height: 423px;
+  object-position: 50% 50.84%;
+  margin: 20px auto 0 0;
+}
+
+.u-section-8 .u-group-1 {
+  width: 800px;
+  min-height: 149px;
+  margin: -99px 155px 0 auto;
+}
+
+.u-section-8 .u-container-layout-1 {
+  padding: 30px 30px 11px;
+}
+
+.u-section-8 .u-text-1 {
+  font-weight: 700;
+  font-style: normal;
+  width: 573px;
+  margin: -13px auto 0;
+}
+
+.u-section-8 .u-text-2 {
+  font-size: 1.25rem;
+  font-weight: 400;
+  line-height: 1.6;
+  margin: 20px 0 80px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-8 .u-sheet-1 {
+    min-height: 762px;
+  }
+
+  .u-section-8 .u-image-1 {
+    background-position: 50% 50%;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-8 .u-group-1 {
+    min-height: 155px;
+    margin-top: 0;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-section-8 .u-text-1 {
+    margin-top: 0;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-8 .u-text-2 {
+    margin-bottom: -1367px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-8 .u-sheet-1 {
+    min-height: 794px;
+  }
+
+  .u-section-8 .u-text-2 {
+    width: 720px;
+    margin-bottom: -1335px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-8 .u-sheet-1 {
+    min-height: 828px;
+  }
+
+  .u-section-8 .u-group-1 {
+    min-height: 157px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-8 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-8 .u-text-1 {
+    width: 520px;
+  }
+
+  .u-section-8 .u-text-2 {
+    width: 540px;
+    margin-bottom: -1717px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-8 .u-sheet-1 {
+    min-height: 758px;
+  }
+
+  .u-section-8 .u-group-1 {
+    min-height: 129px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-8 .u-text-1 {
+    width: 320px;
+  }
+
+  .u-section-8 .u-text-2 {
+    width: 340px;
+    margin-bottom: 80px;
+  }
+}.u-section-9 .u-sheet-1 {
+  min-height: 100px;
+}
+
+.u-section-9 .u-text-1 {
   font-size: 1.25rem;
   font-weight: normal;
   margin: 39px 20px;
 }
 
 @media (max-width: 1199px) {
-  .u-section-7 .u-text-1 {
+  .u-section-9 .u-text-1 {
     margin-left: 0;
     margin-right: 0;
   }
