--- a/docs/Highlights-News.css
+++ b/docs/Highlights-News.css
@@ -615,8 +615,9 @@
   }
 
   .u-section-4 .u-text-1 {
-    margin-left: -30px;
-    margin-right: -30px;
+    margin-left: 0;
+    margin-right: 0;
+    width: auto;
   }
 
   .u-section-4 .u-text-2 {
@@ -643,8 +644,6 @@
   }
 
   .u-section-4 .u-text-1 {
-    margin-left: 0;
-    margin-right: 0;
     width: 520px;
   }
 
