--- a/docs/Highlights-News.css
+++ b/docs/Highlights-News.css
@@ -581,6 +581,10 @@
   padding: 0;
 }
 
+.u-section-4 .u-btn-4 {
+  padding: 0;
+}
+
 @media (max-width: 1199px) {
   .u-section-4 .u-sheet-1 {
     min-height: 890px;
@@ -617,7 +621,6 @@
   .u-section-4 .u-text-1 {
     margin-left: 0;
     margin-right: 0;
-    width: auto;
   }
 
   .u-section-4 .u-text-2 {
