--- a/docs/Green-Lab-Energy.css
+++ b/docs/Green-Lab-Energy.css
@@ -534,139 +534,496 @@
     font-size: 3rem;
     margin-top: -52px;
   }
-}.u-section-4 .u-sheet-1 {
-  min-height: 605px;
+}.u-section-4 {
+  background-image: none;
 }
 
-.u-section-4 .u-image-1 {
-  height: 423px;
-  object-position: 50% 78.94%;
-  margin: 20px auto 0 0;
+.u-section-4 .u-sheet-1 {
+  min-height: 808px;
 }
 
 .u-section-4 .u-group-1 {
+  min-height: 101px;
   width: 800px;
-  min-height: 149px;
-  margin: -99px 155px 0 auto;
+  margin: 38px auto 0;
 }
 
 .u-section-4 .u-container-layout-1 {
-  padding: 30px 30px 11px;
+  padding-left: 60px;
+  padding-right: 60px;
+  padding-bottom: 0;
 }
 
 .u-section-4 .u-text-1 {
-  font-weight: 700;
-  font-style: normal;
-  line-height: 1.2;
-  margin: -7px 58px 0;
+  font-size: 2.5rem;
+  font-weight: bold;
+  margin: 0;
 }
 
-.u-section-4 .u-btn-1 {
-  padding: 0;
+.u-section-4 .u-layout-wrap-1 {
+  margin: 16px 0 0 auto;
+}
+
+.u-section-4 .u-layout-cell-1 {
+  min-height: 584px;
+  background-image: none;
+}
+
+.u-section-4 .u-container-layout-2 {
+  padding-bottom: 10px;
+}
+
+.u-section-4 .u-image-1 {
+  height: 250px;
+  object-position: 50% 31.22%;
+  margin: 0 auto 0 0;
 }
 
 .u-section-4 .u-text-2 {
-  font-size: 1.25rem;
-  font-weight: 400;
-  line-height: 1.6;
-  margin: 20px 0 80px;
+  font-size: 1.5rem;
+  font-weight: 700;
+  width: 129px;
+  margin: 28px auto 0;
+}
+
+.u-section-4 .u-text-3 {
+  font-size: 1rem;
+  margin: 22px 21px 0;
+}
+
+.u-section-4 .u-text-4 {
+  margin: 20px 21px 0;
+}
+
+.u-section-4 .u-layout-cell-2 {
+  min-height: 584px;
+  background-image: none;
+}
+
+.u-section-4 .u-container-layout-3 {
+  padding-bottom: 10px;
+}
+
+.u-section-4 .u-image-2 {
+  height: 250px;
+  margin: 0;
+}
+
+.u-section-4 .u-text-5 {
+  font-size: 1.5rem;
+  font-weight: 700;
+  margin: 28px 28px 0;
+}
+
+.u-section-4 .u-text-6 {
+  font-size: 1rem;
+  margin: 22px 20px 0;
+}
+
+.u-section-4 .u-text-7 {
+  margin: 20px 20px 0;
+}
+
+.u-section-4 .u-layout-cell-3 {
+  min-height: 584px;
+  background-image: none;
+}
+
+.u-section-4 .u-container-layout-4 {
+  padding-bottom: 10px;
+}
+
+.u-section-4 .u-image-3 {
+  height: 250px;
+  margin: 0 auto 0 0;
+}
+
+.u-section-4 .u-text-8 {
+  font-size: 1.5rem;
+  font-weight: 700;
+  width: 232px;
+  margin: 28px auto 0;
+}
+
+.u-section-4 .u-text-9 {
+  margin: 22px 21px 0;
+}
+
+.u-section-4 .u-btn-1 {
+  border-style: none;
+  background-image: none;
+  font-size: 1.875rem;
+  margin: 20px 0 24px auto;
+  padding: 4px 30px;
 }
 
 @media (max-width: 1199px) {
   .u-section-4 .u-sheet-1 {
-    min-height: 980px;
-  }
-
-  .u-section-4 .u-image-1 {
-    background-position: 50% 50%;
-    margin-right: initial;
-    margin-left: initial;
+    min-height: 891px;
   }
 
   .u-section-4 .u-group-1 {
-    min-height: 155px;
-    margin-top: 0;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
+    margin-top: 21px;
+  }
+
+  .u-section-4 .u-container-layout-1 {
+    padding-left: 49px;
+    padding-right: 49px;
   }
 
   .u-section-4 .u-text-1 {
-    width: 573px;
-    margin-top: 0;
-    margin-left: auto;
-    margin-right: auto;
+    position: relative;
+  }
+
+  .u-section-4 .u-layout-wrap-1 {
+    min-height: 244px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-4 .u-layout-cell-1 {
+    min-height: 647px;
+  }
+
+  .u-section-4 .u-image-1 {
+    object-position: 50% 29.6%;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-4 .u-text-2 {
-    margin-bottom: -1149px;
+    position: relative;
+    margin-left: 16px;
+    margin-right: 16px;
+  }
+
+  .u-section-4 .u-text-3 {
+    position: relative;
+    margin-left: 16px;
+    margin-right: 16px;
+  }
+
+  .u-section-4 .u-text-4 {
+    margin-top: 18px;
+    margin-left: 16px;
+    margin-right: 16px;
+  }
+
+  .u-section-4 .u-layout-cell-2 {
+    min-height: 647px;
+  }
+
+  .u-section-4 .u-image-2 {
+    object-position: 0% 50%;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-4 .u-text-5 {
+    position: relative;
+    margin-left: 16px;
+    margin-right: 16px;
+  }
+
+  .u-section-4 .u-text-6 {
+    position: relative;
+    margin-left: 16px;
+    margin-right: 16px;
+  }
+
+  .u-section-4 .u-text-7 {
+    margin-left: 16px;
+    margin-right: 16px;
+  }
+
+  .u-section-4 .u-layout-cell-3 {
+    min-height: 647px;
+  }
+
+  .u-section-4 .u-image-3 {
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-4 .u-text-8 {
+    position: relative;
+    margin-left: 16px;
+    margin-right: 16px;
+  }
+
+  .u-section-4 .u-text-9 {
+    position: relative;
+    margin-left: 16px;
+    margin-right: 16px;
+  }
+
+  .u-section-4 .u-btn-1 {
+    margin-top: 16px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-4 .u-sheet-1 {
-    min-height: 1012px;
+    min-height: 1022px;
   }
 
-  .u-section-4 .u-text-1 {
-    margin-left: -30px;
-    margin-right: -30px;
+  .u-section-4 .u-group-1 {
+    min-height: 136px;
+    margin-top: 0;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-section-4 .u-container-layout-1 {
+    padding-left: 38px;
+    padding-right: 38px;
+  }
+
+  .u-section-4 .u-layout-cell-1 {
+    min-height: 100px;
+  }
+
+  .u-section-4 .u-image-1 {
+    object-position: 50% 53.44%;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-4 .u-text-2 {
-    width: 720px;
-    margin-bottom: -1117px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .u-section-4 .u-text-3 {
+    margin-left: 13px;
+    margin-right: 13px;
+  }
+
+  .u-section-4 .u-text-4 {
+    margin-left: 13px;
+    margin-right: 13px;
+  }
+
+  .u-section-4 .u-layout-cell-2 {
+    min-height: 100px;
+  }
+
+  .u-section-4 .u-image-2 {
+    object-position: 0% 100%;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-4 .u-text-5 {
+    margin-left: 13px;
+    margin-right: 13px;
+  }
+
+  .u-section-4 .u-text-6 {
+    margin-top: 20px;
+    margin-left: 13px;
+    margin-right: 13px;
+  }
+
+  .u-section-4 .u-text-7 {
+    margin-top: 22px;
+    margin-left: 13px;
+    margin-right: 13px;
+  }
+
+  .u-section-4 .u-layout-cell-3 {
+    min-height: 100px;
+  }
+
+  .u-section-4 .u-image-3 {
+    object-position: 16.47% 50%;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-4 .u-text-8 {
+    width: 217px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-4 .u-text-9 {
+    margin-left: 13px;
+    margin-right: 13px;
+  }
+
+  .u-section-4 .u-btn-1 {
+    margin-top: 28px;
+    margin-bottom: 60px;
+    margin-left: 543px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-4 .u-sheet-1 {
-    min-height: 1076px;
+    min-height: 2192px;
   }
 
   .u-section-4 .u-group-1 {
-    min-height: 213px;
-    width: auto;
+    min-height: 106px;
+    width: 474px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .u-section-4 .u-container-layout-1 {
+    padding-top: 30px;
+    padding-left: 28px;
+    padding-right: 28px;
+  }
+
+  .u-section-4 .u-layout-wrap-1 {
+    margin-top: 25px;
     margin-right: initial;
     margin-left: initial;
   }
 
-  .u-section-4 .u-container-layout-1 {
-    padding-left: 10px;
-    padding-right: 10px;
+  .u-section-4 .u-image-1 {
+    height: 400px;
+    object-position: 50% 30.39%;
+    margin-right: initial;
+    margin-left: initial;
   }
 
-  .u-section-4 .u-text-1 {
-    margin-left: 0;
-    margin-right: 0;
-    width: 520px;
+  .u-section-4 .u-text-3 {
+    margin-left: 9px;
+    margin-right: 9px;
   }
 
-  .u-section-4 .u-text-2 {
-    width: 540px;
-    margin-bottom: -1469px;
+  .u-section-4 .u-text-4 {
+    width: auto;
+  }
+
+  .u-section-4 .u-image-2 {
+    height: 400px;
+    object-position: 0% 0%;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-4 .u-text-5 {
+    margin-left: 9px;
+    margin-right: 9px;
+  }
+
+  .u-section-4 .u-text-6 {
+    margin-left: 9px;
+    margin-right: 9px;
+  }
+
+  .u-section-4 .u-image-3 {
+    height: 400px;
+    object-position: 16.47% 0%;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-4 .u-text-8 {
+    width: 242px;
+    margin-top: 27px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .u-section-4 .u-text-9 {
+    margin-top: 23px;
+    margin-left: 9px;
+    margin-right: 9px;
+  }
+
+  .u-section-4 .u-btn-1 {
+    margin-bottom: 44px;
+    margin-left: auto;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-4 .u-sheet-1 {
-    min-height: 758px;
+    min-height: 1871px;
   }
 
   .u-section-4 .u-group-1 {
-    min-height: 129px;
-    width: auto;
+    width: 340px;
+  }
+
+  .u-section-4 .u-container-layout-1 {
+    padding-left: 18px;
+    padding-right: 18px;
+  }
+
+  .u-section-4 .u-layout-cell-1 {
+    min-height: 63px;
+  }
+
+  .u-section-4 .u-image-1 {
+    height: 250px;
     margin-right: initial;
     margin-left: initial;
   }
 
-  .u-section-4 .u-text-1 {
-    width: 320px;
+  .u-section-4 .u-text-3 {
+    margin-left: 6px;
+    margin-right: 6px;
   }
 
-  .u-section-4 .u-text-2 {
-    width: 340px;
-    margin-bottom: 80px;
+  .u-section-4 .u-text-4 {
+    margin-left: 6px;
+    margin-right: 6px;
+  }
+
+  .u-section-4 .u-layout-cell-2 {
+    min-height: 63px;
+  }
+
+  .u-section-4 .u-image-2 {
+    height: 250px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-4 .u-text-5 {
+    margin-left: 6px;
+    margin-right: 6px;
+  }
+
+  .u-section-4 .u-text-6 {
+    margin-left: 6px;
+    margin-right: 6px;
+  }
+
+  .u-section-4 .u-text-7 {
+    margin-left: 6px;
+    margin-right: 6px;
+  }
+
+  .u-section-4 .u-layout-cell-3 {
+    min-height: 63px;
+  }
+
+  .u-section-4 .u-image-3 {
+    height: 250px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-4 .u-text-8 {
+    width: 229px;
+  }
+
+  .u-section-4 .u-text-9 {
+    margin-left: 6px;
+    margin-right: 6px;
+  }
+
+  .u-section-4 .u-btn-1 {
+    margin-top: 20px;
+    margin-bottom: 38px;
   }
 }.u-section-5 .u-sheet-1 {
   min-height: 605px;
@@ -674,7 +1031,7 @@
 
 .u-section-5 .u-image-1 {
   height: 423px;
-  object-position: 50% 50.84%;
+  object-position: 50% 78.94%;
   margin: 20px auto 0 0;
 }
 
@@ -691,8 +1048,12 @@
 .u-section-5 .u-text-1 {
   font-weight: 700;
   font-style: normal;
-  width: 573px;
-  margin: -13px auto 0;
+  line-height: 1.2;
+  margin: -7px 58px 0;
+}
+
+.u-section-5 .u-btn-1 {
+  padding: 0;
 }
 
 .u-section-5 .u-text-2 {
@@ -704,7 +1065,7 @@
 
 @media (max-width: 1199px) {
   .u-section-5 .u-sheet-1 {
-    min-height: 762px;
+    min-height: 980px;
   }
 
   .u-section-5 .u-image-1 {
@@ -722,17 +1083,20 @@
   }
 
   .u-section-5 .u-text-1 {
+    width: 573px;
     margin-top: 0;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .u-section-5 .u-text-2 {
-    margin-bottom: -1367px;
+    margin-bottom: -1149px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-5 .u-sheet-1 {
-    min-height: 794px;
+    min-height: 1012px;
   }
 
   .u-section-5 .u-text-1 {
@@ -742,17 +1106,17 @@
 
   .u-section-5 .u-text-2 {
     width: 720px;
-    margin-bottom: -1335px;
+    margin-bottom: -1117px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-5 .u-sheet-1 {
-    min-height: 828px;
+    min-height: 1076px;
   }
 
   .u-section-5 .u-group-1 {
-    min-height: 157px;
+    min-height: 213px;
     width: auto;
     margin-right: initial;
     margin-left: initial;
@@ -771,7 +1135,7 @@
 
   .u-section-5 .u-text-2 {
     width: 540px;
-    margin-bottom: -1717px;
+    margin-bottom: -1469px;
   }
 }
 
@@ -796,17 +1160,144 @@
     margin-bottom: 80px;
   }
 }.u-section-6 .u-sheet-1 {
-  min-height: 100px;
+  min-height: 605px;
+}
+
+.u-section-6 .u-image-1 {
+  height: 423px;
+  object-position: 50% 50.84%;
+  margin: 20px auto 0 0;
+}
+
+.u-section-6 .u-group-1 {
+  width: 800px;
+  min-height: 149px;
+  margin: -99px 155px 0 auto;
+}
+
+.u-section-6 .u-container-layout-1 {
+  padding: 30px 30px 11px;
 }
 
 .u-section-6 .u-text-1 {
+  font-weight: 700;
+  font-style: normal;
+  width: 573px;
+  margin: -13px auto 0;
+}
+
+.u-section-6 .u-text-2 {
+  font-size: 1.25rem;
+  font-weight: 400;
+  line-height: 1.6;
+  margin: 20px 0 80px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-6 .u-sheet-1 {
+    min-height: 762px;
+  }
+
+  .u-section-6 .u-image-1 {
+    background-position: 50% 50%;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-6 .u-group-1 {
+    min-height: 155px;
+    margin-top: 0;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-section-6 .u-text-1 {
+    margin-top: 0;
+  }
+
+  .u-section-6 .u-text-2 {
+    margin-bottom: -1367px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-6 .u-sheet-1 {
+    min-height: 794px;
+  }
+
+  .u-section-6 .u-text-1 {
+    margin-left: -30px;
+    margin-right: -30px;
+  }
+
+  .u-section-6 .u-text-2 {
+    width: 720px;
+    margin-bottom: -1335px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-6 .u-sheet-1 {
+    min-height: 828px;
+  }
+
+  .u-section-6 .u-group-1 {
+    min-height: 157px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-6 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-6 .u-text-1 {
+    margin-left: 0;
+    margin-right: 0;
+    width: 520px;
+  }
+
+  .u-section-6 .u-text-2 {
+    width: 540px;
+    margin-bottom: -1717px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-6 .u-sheet-1 {
+    min-height: 758px;
+  }
+
+  .u-section-6 .u-group-1 {
+    min-height: 129px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-6 .u-text-1 {
+    width: 320px;
+  }
+
+  .u-section-6 .u-text-2 {
+    width: 340px;
+    margin-bottom: 80px;
+  }
+}.u-section-7 .u-sheet-1 {
+  min-height: 100px;
+}
+
+.u-section-7 .u-text-1 {
   font-size: 1.25rem;
   font-weight: normal;
   margin: 39px 20px;
 }
 
 @media (max-width: 1199px) {
-  .u-section-6 .u-text-1 {
+  .u-section-7 .u-text-1 {
     margin-left: 0;
     margin-right: 0;
   }
