--- a/docs/Sustainability.css
+++ b/docs/Sustainability.css
@@ -526,6 +526,10 @@
   padding: 0;
 }
 
+.u-section-3 .u-btn-9 {
+  padding: 0;
+}
+
 @media (max-width: 1199px) {
   .u-section-3 .u-tabs-1 {
     height: auto;
